--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "aos": "^3.0.0-beta.6",
+    "gsap": "^3.12.5",
     "next": "14.1.0",
     "next-intl": "^3.9.1",
     "react": "^18",
