--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/third-parties": "^14.2.1",
     "aos": "^3.0.0-beta.6",
     "gsap": "^3.12.5",
     "next": "14.1.0",
