--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@next/third-parties": "^14.2.1",
     "aos": "^3.0.0-beta.6",
     "gsap": "^3.12.5",
-    "next": "14.1.0",
+    "next": "^14.2.3",
     "next-intl": "^3.9.1",
     "react": "^18",
     "react-dom": "^18"
