--- a/package.json
+++ b/package.json
@@ -3,16 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbo",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
     "@next/third-parties": "^14.2.1",
-    "aos": "^3.0.0-beta.6",
+    "aos": "^2.3.4",
     "gsap": "^3.12.5",
-    "next": "^14.2.3",
+    "next": "^14.2.5",
     "next-intl": "^3.9.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
